# database-models

./: .gitignore  README.md
assignments/01-spj/: README.md
assignments/01-spj/01-db-setup/: 00_create_database.sql  01_schema.sql  02_seed.sql
assignments/01-spj/02-queries/: 01_restricted_selects.sql  02_filters_between_in_like_null.sql  03_joins_and_combinations.sql  04_subqueries.sql  05_aggregates.sql  06_group_by_having.sql  07_unions.sql
assignments/01-spj/03-db-drop/: 00_drop_database.sql  01_drop_schema_objects.sql  02_drop_role.sql  README_DROP.md
assignments/02-data-modelling/: README.md
assignments/03-rsl-lp-db/: README.md
assignments/03-rsl-lp-db/01-db-setup/: 00_create_database.sql  01_schema.sql  02_seed.sql
assignments/03-rsl-lp-db/02-queries/: 01_restricted_selects.sql  02_filters_between_in_like_null.sql  03_joins_and_combinations.sql  04_subqueries.sql  05_aggregates.sql  06_group_by_having.sql  07_unions.sql
assignments/03-rsl-lp-db/03-db-drop/: 00_drop_database.sql  01_drop_schema_objects.sql  02_drop_role.sql  README_DROP.md
assignments/04-mongo-db/01-rsl-lp-db/: README.md
assignments/04-mongo-db/02-documents-and-indexes/: README.md
assignments/05-neo4j-db-creator-app/: .gitignore  README.md  pyproject.toml
assignments/05-neo4j-db-creator-app/src/neo4j_db_creator_app/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  graph_builder.py  logging_config.py  neo4j_client.py  routes.py
assignments/05-neo4j-db-creator-app/tests/: test_isolation.py  test_rel_types.py  test_routes.py
assignments/06-assessment/: README.md
(+90 files in other folders)
